<resources>
    <string name="app_name">Pahepuntari</string>
    <string name="tobacco_price">Syötä hinta</string>
    <string name="viceDialogTitle">Valitse lisättävä pahe</string>
    <string name="btnAddVice">Lisää pahe</string>
    <string name="btnRemoveVice">Poista pahe</string>
    <string name="viceAddDialogTitle">Valitse lisättävä pahe</string>
    <string name="viceAddDialogOkButton">Lisää valitut</string>
    <string name="viceRemoveDialogTitle">Valitse poistettava pahe</string>
    <string name="viceRemoveDialogOkButton">Poista valitut</string>
    <string name="viceRemoveDialogNegativeButton">Peruuta</string>
    <string name="alcohol">Alkoholi</string>
    <string name="tobacco">Tupakka</string>
    <string name="snuff">Nuuska</string>
    <string name="day">Tämä päivä</string>
    <string name="thisWeek">Tällä viikolla</string>
    <string name="thisMonth">Tässä kuussa</string>
    <string name="thisYear">Tänä vuonna</string>
    <string name="vices">Paheet</string>
    <string name="movement">Hyveet</string>
    <string name="statistics">Tilastot</string>
    <string name="dangerZone">Riskiraja</string>
    <string name="smokedCigarettes">Tupakoita poltettu</string>
    <string name="alcoholDrunk">Annoksia juotu</string>
    <string name="xAccText">m/s²</string>
    <string name="yAccText">m/s²</string>
    <string name="zAccText">m/s²</string>
    <string name="xRotText">rad/s</string>
    <string name="yRotText">rad/s</string>
    <string name="zRotText">rad/s</string>
    <string name="buttonStartTrackingMovement">Aloita aktiivisuuden seuranta</string>
    <string name="activity">Aktiivisuus</string>
</resources>